--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -112,7 +112,7 @@
   }
   li.menu-item a{
     padding: .5rem 1rem;
-    color: black;
+    color: #fff;
   }
   li.menu-item a:hover{
     color: var(--main-c);
@@ -142,7 +142,7 @@
   
   @media (min-width:768px){
    a.logo-header{
-    color: black;
+    color: #fff;
    }
   }
   
@@ -203,91 +203,120 @@
 
 /*formulario*/
 
-body{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+  box-sizing: border-box;
 }
 
-form{
-    padding: 50px 55px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    text-align: center;
-    width: 340px;
+body {
+  background: #181818;
+  color: #fff;
+  line-height: 1.6;
+  padding: 0 1.5em;
 }
 
-.input-group{
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+.container {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5em;
 }
 
-h2{
-    color: #283629;
-    font-size: 35px;
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-label{
-    color: #283629;
-    font-size: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
+.logo {
+  text-align: center;
+  font-size: 3em;
 }
 
-input, textarea{
-    padding: 17px 25px;
-    border-radius: 25px;
-    margin-bottom: 20px;
-    background-color: #EDFFF0;
-    border: 2px solid #F0FAF1;
-    color: #283629;
-    outline: none;
+.logo span {
+  color: var(--main-c);
 }
 
-input ::placeholder, textarea::placeholder{
-color: #b5cab6;
+.contact-wrapper {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
 }
 
-.form-txt{
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+.contact-wrapper > * {
+  padding: 1em;
 }
 
-.form-txt a{
-    color: #76b28e;
-    font-size: 14px;
-    font-weight: 600;
-    text-decoration: none;
+.contact-form {
+  background: #222222;
 }
 
-.btn{
-    font-size: 16px;
-    color: white;
-    border: 0;
-    border-radius: 25px;
-    background-color: #51D94C;
-    box-shadow: 0 0 20px rgba(25, 254, 0, 0.4);
-    cursor: pointer;
+.contact-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.btn:hover{
-    background-color: #50E048;
+.contact-form form label {
+  display: block;
 }
 
-@media(max-width:768px){
-    body{
-        padding: 30px;
-    }
-    form{
-        padding: 50px 30px;
-        width: 100%;
-    }
-    input{
-        padding: 15px;
+.contact-form form p {
+  margin: 0;
+  padding: 1em;
+}
 
-    }
+.contact-form form .block {
+  grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+  width: 100%;
+  padding: .7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: #fff;
+  border-bottom: 1px solid var(--main-c);
+}
+
+.contact-form form button {
+  background: var(--main-c);
+  border: 0;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+  background: #d63031;
+  color: #fff;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+  background: #000;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+/* LARGE SIZE */
+@media(min-width: 700px) {
+  body {
+      padding: 0 4em;
+  }
+  .contact-wrapper {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+  }
+  .contact-wrapper > * {
+      padding: 2em;
+  }
+  .contact-info h4,
+  .contact-info ul,
+  .contact-info p {
+      text-align: left;
+  }
 }
