--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -55,10 +55,13 @@
   /* Header Restaurante */
   
   header.main-header{
-    position: relative;    
+    /*position: relative;    
     top: 0;
     width: 100%;
-    z-index:9999;
+    z-index:9999;*/
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 2rem;
   }
   .header-wrap{
     display: flex;
@@ -124,8 +127,9 @@
   }
   
   i.toggle-menu{
+    color: #fff;
     display: none;
-    background-color: #fff;
+    /*background-color: #fff;*/
     border: none;
     z-index: 9999;
   }
